# CYNTHIA-DL

./: CMakeLists.txt  Config.h.in  README.md  bootstrap.py  build_and_install.py  matrix_mul.metal  requirements.txt  vcpkg.json
DataProcessing/: CSV.h
Sandbox/src/: main.cpp
cmake/: FindSphinx.cmake
doc/: CMakeLists.txt  api_reference.rst  conf.py.in  index.rst
include/: doc_demo.h  neurocyn.h
include/Core/: GD.h
include/Tensor/: tensor.h
include/Utils/: hetero_dict.h  new_tuple_type.h  type_traits.h  utils.h
misc/: ascii_cynthia.txt
scripts/: ScanAudioCapturingDevices.py
src/: CmakeLists.txt  cydl.h  demo.cpp  template_testing_space.h
src/Common/: Allocator.h  ContinuousMemory.h  IncludeUtils.h  LowerLevel.h  Matrix.h  MemoryPool.h  PrincipalType.h  TypeTraits.h  Types.h  new_tuple_type.h  type_traits.h  utils.h
src/Common/Containers/: Batch.h  Map.h  Policy.h  PolicyContainer.h  Tuple.h
src/Common/Internal/: LowerAccessImpl.h
src/Common/Memory/: Allocator.h  ContinuousMemory.h  MemoryPool.h
src/Common/Policies/: ####.h  CheckingPolicy.h  CreationPolicy.h  PolicyMacros.h
src/Common/Tags/: Devices.h  Types.h
src/Common/Types/: Matrix.h  PrincipalType.h  Scalar.h  TrivialMatrix.h  Vector.h
src/Common/Utils/: TypeTraits.h
src/Core/: GD.cpp  GD.h
src/Core/Containers/: Batch.h  Map.h  Policy.h  Tuple.h
src/Core/Internal/: EvalBuffer.h  README.md  Shape.h
src/Core/Memory/: Allocator.h  ContinuousMemory.h  MemoryPool.h
src/Core/Policies/: CheckingPolicy.h  PolicyMacros.h
src/Core/Policies/Allocate/: FixedBlockAllocation.h
src/Core/Tags/: Types.h
src/Core/Types/: Array.h  Matrix.h  PrincipalType.h  TrivialMatrix.h  ZeroMatrix.h
src/Core/Utils/: AssertCompileTime.h  LowerLevel.h  Macros.h  TypeChecker.h  Utils.cpp  Utils.h
src/Core/utils/: Macros.h
src/Data/: CSVParser.h
src/Layers/: Convolution.cpp
tests/: main_tests.cpp
